1.6.13
	* bugfix #427: Eplicitely link ssl with the programs that use it.
	* Fix reading \DDD: Error on values that are outside range (>255).
	* bugfix #429: fix doxyparse.plfails on NetBSD because specified
	  path to perl.

1.6.12
	* bugfix #413: Fix manpage source for srcdir != builddir
	* Canonicalize the signers name rdata field in RRSIGs when signing
	* Ignore minor version of Private-key-format (so v1.3 may be used)
	* Allow a check_time to be given in stead of always checking against
	  the current time. With ldns-verify-zone the check_time can be set
	  with the -t option.
	* Added functions for updating and manipulating SOA serial numbers.
	  ldns-read-zone has an option -S for updating and manipulating the
	  serial numbers.
	* The library Makefile is now GNU and BSD make compatible.
	* bugfix #419: NSEC3 validation of a name covered by a wildcard with
	  no data.
	* Two new options (--with-drill and --with-examples) to the main
	  configure script (in the root of the source tree) to build drill
	  and examples too.
	* Fix days_since_epoch to year_yday calculation on 32bits systems.

1.6.11	2011-09-29
	* bugfix #394: Fix socket leak on errors
	* bugfix #392: Apex only and percentage checks for ldns-verify-zone
	  (thanks Miek Gieben)
	* bugfix #398: Allow NSEC RRSIGs before the NSEC3 in ldns-verify-zone
	* Fix python site package path from sitelib to sitearch for pyldns.
	* Fix python api to support python2 and python3 (thanks Karel Slany).
	* bugfix #401: Correction of date/time functions algorithm and
	  prevention of an infinite loop therein
	* bugfix #402: Correct the minimum and maximum number of rdata fields
	  in TSIG. (thanks David Keeler)
	* bugfix #403: Fix heap overflow (thanks David Keeler)
	* bugfix #404: Make parsing APL strings more robust
	  (thanks David Keeler)
	* bugfix #391: Complete library assessment to prevent assertion errors
	  through ldns_rdf_size usage.
	* Slightly more specific error messaging on wrong number of rdata